# gallery-rs

./: .gitignore  Cargo.toml  README.md  book.toml
.github/workflows/: rust.yml
companion-book/: book.toml
companion-book/src/: SUMMARY.md  not-obvious-at-first.md  title-page.md
companion-book/src/not-obvious-at-first/: mutable-reference.md
companion-book/src/rustification/: option-cheat-sheet.md
src/: SUMMARY.md  cookbook.md  links.md  main.rs  rustification.md  title-page.md
src/gallery_rs_utils/: Cargo.toml
src/gallery_rs_utils/assets/: corrupted_utf8
src/gallery_rs_utils/src/: lib.rs
src/not-obvious-at-first/: Cargo.toml  mutable-reference.md  spurious-stream-lock.md  tokio-spawn-&-lifetime.md  tokio-vs-futures.md  type-driven-api.md
src/not-obvious-at-first/examples/: futures.rs  tokio.rs  tokio_stream.rs
src/not-obvious-at-first/examples/cookbook/: recipe1.rs
src/not-obvious-at-first/examples/lifetimes/: puzzle1_minimized_problem.rs  puzzle1_minimized_solution1.rs  puzzle1_minimized_solution2.rs  puzzle1_problem.rs  puzzle1_problem_extended.rs  puzzle1_solution.rs
src/not-obvious-at-first/examples/spurious-stream-lock/: async_string_futures_gz_stream_lock.rs  async_string_futures_stream_lock.rs  async_string_stream.rs  async_string_tokio_gz_stream_nolock.rs  async_string_tokio_stream_nolock.rs  string_stream.rs
src/not-obvious-at-first/examples/tokio-vs-futures/: futures.rs
src/not-obvious-at-first/examples/type-driven-api/: type-driven-api.rs
src/not-obvious-at-first/src/: lib.rs
src/rustification/: option-cheat-sheet.md
