[package]
name = "not-obvious-at-first"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-compression = { version = "0.4.3", features = ["tokio", "gzip", "futures-io"] }
async-fs = "1.6.0"
futures = "0.3.28"
#itertools = "0.11.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }

[dev-dependencies]
gallery_rs_utils = { path = "../gallery_rs_utils" }
