[package]
name = "not-obvious-at-first"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
async-compression = { version = "0.4.23", features = ["tokio", "gzip", "futures-io"] }
async-executor = "1.13.2"
async-fs = "2.1.2"
async-io = "2.4.0"
#async-std = "1.12.0"
futures = "0.3.31"
#itertools = "0.11.0""
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }

[dev-dependencies]
gallery_rs_utils = { path = "../gallery_rs_utils" }

#tokio-vs-futures
[[example]]
name = "futures"
path = "examples/tokio-vs-futures/futures.rs"

[[example]]
name = "tokio"
path = "examples/tokio-vs-futures/tokio.rs"

[[example]]
name = "tokio_stream"
path = "examples/tokio-vs-futures/tokio_stream.rs"

#spurious-stream-lock
[[example]]
name = "string_stream"
path = "examples/spurious-stream-lock/string_stream.rs"

[[example]]
name = "async_string_stream"
path = "examples/spurious-stream-lock/async_string_stream.rs"

[[example]]
name = "async_string_futures_stream_lock"
path = "examples/spurious-stream-lock/async_string_futures_stream_lock.rs"

[[example]]
name = "async_string_tokio_stream_nolock"
path = "examples/spurious-stream-lock/async_string_tokio_stream_nolock.rs"

[[example]]
name = "async_string_tokio_gz_stream_nolock"
path = "examples/spurious-stream-lock/async_string_tokio_gz_stream_nolock.rs"

[[example]]
name = "async_string_futures_gz_stream_lock"
path = "examples/spurious-stream-lock/async_string_futures_gz_stream_lock.rs"

[[example]]
name = "lifetimes_puzzle1_solution"
path = "examples/lifetimes/puzzle1_solution.rs"

# [[example]]
# name = "lifetimes_puzzle1_problem_extended"
# path = "examples/lifetimes/puzzle1_problem_extended.rs"

[[example]]
name = "lifetimes_puzzle1_minimized_solution1"
path = "examples/lifetimes/puzzle1_minimized_solution1.rs"

[[example]]
name = "lifetimes_puzzle1_minimized_solution2"
path = "examples/lifetimes/puzzle1_minimized_solution2.rs"

[[example]]
name = "recipe1"
path = "examples/cookbook/recipe1.rs"

[[example]]
name = "type-driven-api"
path = "examples/type-driven-api/type-driven-api.rs"